Made header blue

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html> 
+    <head>
+        <style>
+            h1 { color: blue; }
+        </style>
+    </head>
     <body>
         <h1> New File! VERY NICE.</h1>
     </body>
